# koronome

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  k_lump.c  k_lump.h  k_main.c  k_main.h  k_playpal.c  k_playpal.h  k_world.c  k_world.h  koronome.c  koronome.h  koronome.wad  player.c  player.h  ray.c  ray.h  rxi_map.c  rxi_vec.c  wad.c  wad.h  world.c  world.h
src/: CMakeLists.txt  Makefile  k_lump.c  k_lump.cc  k_lump.h  k_lump.hh  k_main.c  k_main.cc  k_main.h  k_main.hh  k_player.c  k_player.h  k_world.c  k_world.h  koronome.c  koronome.h  lump.c  lump.h  player.c  player.h
src/rxi/: CMakeLists.txt
